parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    VAR

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaraciones main
Rule 2     declaraciones -> empty
Rule 3     declaraciones -> var_def SEMICOLON declaraciones
Rule 4     declaraciones -> funcion_def declaraciones
Rule 5     declaraciones -> clase_def declaraciones
Rule 6     clase_def -> CLASS ID clase_op bloque_clase
Rule 7     clase_op -> INHERIT ID
Rule 8     clase_op -> empty
Rule 9     bloque_clase -> LBRACE op_var op_func RBRACE
Rule 10    op_func -> funcion_def op_func
Rule 11    op_func -> empty
Rule 12    funcion_def -> FUNC ID LPAREN params RPAREN return_option bloque_func
Rule 13    op_var -> var_def SEMICOLON op_var
Rule 14    op_var -> empty
Rule 15    return_option -> RET type_simple
Rule 16    return_option -> empty
Rule 17    params -> var_def params_op
Rule 18    params -> empty
Rule 19    params_op -> COMMA var_def params_op
Rule 20    params_op -> empty
Rule 21    bloque_func -> LBRACE estatutos RBRACE
Rule 22    main -> MAIN LPAREN RPAREN bloque_func
Rule 23    main -> MAIN LPAREN RPAREN error
Rule 24    var_def -> type_compuesto ID
Rule 25    var_def -> type_simple ID op_vardef
Rule 26    op_vardef -> LBRACKET CTEI RBRACKET
Rule 27    op_vardef -> LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
Rule 28    op_vardef -> empty
Rule 29    type_simple -> INT
Rule 30    type_simple -> FLOAT
Rule 31    type_simple -> STRING
Rule 32    type_simple -> BOOL
Rule 33    type_compuesto -> ID
Rule 34    estatutos -> estatuto
Rule 35    estatutos -> estatuto estatutos
Rule 36    estatutos -> empty
Rule 37    estatuto -> asignacion
Rule 38    estatuto -> expresion SEMICOLON
Rule 39    estatuto -> returns
Rule 40    estatuto -> llamada_funcion SEMICOLON
Rule 41    estatuto -> llamada_metodo SEMICOLON
Rule 42    estatuto -> var_def SEMICOLON
Rule 43    estatuto -> lectura
Rule 44    estatuto -> escritura
Rule 45    estatuto -> decision
Rule 46    estatuto -> repeticion
Rule 47    asignacion -> variable EQUAL expresion SEMICOLON
Rule 48    expresion -> expresion binop expresion
Rule 49    expresion -> plus_minus expresion
Rule 50    expresion -> LPAREN expresion RPAREN
Rule 51    expresion -> var_cte
Rule 52    binop -> SAME
Rule 53    binop -> NOTEQ
Rule 54    binop -> GTHAN
Rule 55    binop -> LTHAN
Rule 56    binop -> PLUS
Rule 57    binop -> MINUS
Rule 58    binop -> TIMES
Rule 59    binop -> DIVIDE
Rule 60    plus_minus -> PLUS
Rule 61    plus_minus -> MINUS
Rule 62    var_cte -> variable
Rule 63    var_cte -> boolean
Rule 64    var_cte -> CTEF
Rule 65    var_cte -> CTEI
Rule 66    var_cte -> CTESTRING
Rule 67    boolean -> TRUE
Rule 68    boolean -> FALSE
Rule 69    returns -> RETURN expresion SEMICOLON
Rule 70    llamada_funcion -> ID LPAREN param_llamada RPAREN
Rule 71    param_llamada -> expresion
Rule 72    param_llamada -> expresion COMMA param_llamada
Rule 73    param_llamada -> empty
Rule 74    llamada_metodo -> ID DOT ID LPAREN param_llamada RPAREN
Rule 75    lectura -> READ LPAREN variable op_lectura RPAREN SEMICOLON
Rule 76    op_lectura -> COMMA variable op_lectura
Rule 77    op_lectura -> empty
Rule 78    variable -> ID variable_op
Rule 79    variable_op -> DOT ID
Rule 80    variable_op -> LBRACKET expresion RBRACKET
Rule 81    variable_op -> LBRACKET expresion RBRACKET LBRACKET expresion RBRACKET
Rule 82    variable_op -> empty
Rule 83    escritura -> WRITE LPAREN expresion op_escritura RPAREN SEMICOLON
Rule 84    op_escritura -> COMMA expresion op_escritura
Rule 85    op_escritura -> empty
Rule 86    decision -> IF LPAREN expresion RPAREN THEN LBRACE estatutos RBRACE op_decision
Rule 87    op_decision -> ELSE LBRACE estatutos RBRACE
Rule 88    op_decision -> empty
Rule 89    repeticion -> condicional
Rule 90    repeticion -> no_condicional
Rule 91    condicional -> WHILE LPAREN expresion RPAREN DO LBRACE estatutos RBRACE
Rule 92    no_condicional -> FROM variable EQUAL expresion TO expresion DO LBRACE estatutos RBRACE
Rule 93    empty -> <empty>

Terminals, with rules where they appear

BOOL                 : 32
CLASS                : 6
COLON                : 
COMMA                : 19 72 76 84
CTEF                 : 64
CTEI                 : 26 27 27 65
CTESTRING            : 66
DIVIDE               : 59
DO                   : 91 92
DOT                  : 74 79
ELSE                 : 87
EQUAL                : 47 92
FALSE                : 68
FLOAT                : 30
FROM                 : 92
FUNC                 : 12
GTHAN                : 54
ID                   : 6 7 12 24 25 33 70 74 74 78 79
IF                   : 86
INHERIT              : 7
INT                  : 29
LBRACE               : 9 21 86 87 91 92
LBRACKET             : 26 27 27 80 81 81
LPAREN               : 12 22 23 50 70 74 75 83 86 91
LTHAN                : 55
MAIN                 : 22 23
MINUS                : 57 61
NOTEQ                : 53
PLUS                 : 56 60
RBRACE               : 9 21 86 87 91 92
RBRACKET             : 26 27 27 80 81 81
READ                 : 75
RET                  : 15
RETURN               : 69
RPAREN               : 12 22 23 50 70 74 75 83 86 91
SAME                 : 52
SEMICOLON            : 3 13 38 40 41 42 47 69 75 83
STRING               : 31
THEN                 : 86
TIMES                : 58
TO                   : 92
TRUE                 : 67
VAR                  : 
WHILE                : 91
WRITE                : 83
error                : 23

Nonterminals, with rules where they appear

asignacion           : 37
binop                : 48
bloque_clase         : 6
bloque_func          : 12 22
boolean              : 63
clase_def            : 5
clase_op             : 6
condicional          : 89
decision             : 45
declaraciones        : 1 3 4 5
empty                : 2 8 11 14 16 18 20 28 36 73 77 82 85 88
escritura            : 44
estatuto             : 34 35
estatutos            : 21 35 86 87 91 92
expresion            : 38 47 48 48 49 50 69 71 72 80 81 81 83 84 86 91 92 92
funcion_def          : 4 10
lectura              : 43
llamada_funcion      : 40
llamada_metodo       : 41
main                 : 1
no_condicional       : 90
op_decision          : 86
op_escritura         : 83 84
op_func              : 9 10
op_lectura           : 75 76
op_var               : 9 13
op_vardef            : 25
param_llamada        : 70 72 74
params               : 12
params_op            : 17 19
plus_minus           : 49
programa             : 0
repeticion           : 46
return_option        : 12
returns              : 39
type_compuesto       : 24
type_simple          : 15 25
var_cte              : 51
var_def              : 3 13 17 19 42
variable             : 47 62 75 76 92
variable_op          : 78

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaraciones main
    (2) declaraciones -> . empty
    (3) declaraciones -> . var_def SEMICOLON declaraciones
    (4) declaraciones -> . funcion_def declaraciones
    (5) declaraciones -> . clase_def declaraciones
    (93) empty -> .
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (12) funcion_def -> . FUNC ID LPAREN params RPAREN return_option bloque_func
    (6) clase_def -> . CLASS ID clase_op bloque_clase
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    MAIN            reduce using rule 93 (empty -> .)
    FUNC            shift and go to state 10
    CLASS           shift and go to state 11
    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    programa                       shift and go to state 1
    declaraciones                  shift and go to state 2
    empty                          shift and go to state 3
    var_def                        shift and go to state 4
    funcion_def                    shift and go to state 5
    clase_def                      shift and go to state 6
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaraciones . main
    (22) main -> . MAIN LPAREN RPAREN bloque_func
    (23) main -> . MAIN LPAREN RPAREN error

    MAIN            shift and go to state 17

    main                           shift and go to state 16

state 3

    (2) declaraciones -> empty .

    MAIN            reduce using rule 2 (declaraciones -> empty .)


state 4

    (3) declaraciones -> var_def . SEMICOLON declaraciones

    SEMICOLON       shift and go to state 18


state 5

    (4) declaraciones -> funcion_def . declaraciones
    (2) declaraciones -> . empty
    (3) declaraciones -> . var_def SEMICOLON declaraciones
    (4) declaraciones -> . funcion_def declaraciones
    (5) declaraciones -> . clase_def declaraciones
    (93) empty -> .
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (12) funcion_def -> . FUNC ID LPAREN params RPAREN return_option bloque_func
    (6) clase_def -> . CLASS ID clase_op bloque_clase
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    MAIN            reduce using rule 93 (empty -> .)
    FUNC            shift and go to state 10
    CLASS           shift and go to state 11
    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    funcion_def                    shift and go to state 5
    declaraciones                  shift and go to state 19
    empty                          shift and go to state 3
    var_def                        shift and go to state 4
    clase_def                      shift and go to state 6
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 6

    (5) declaraciones -> clase_def . declaraciones
    (2) declaraciones -> . empty
    (3) declaraciones -> . var_def SEMICOLON declaraciones
    (4) declaraciones -> . funcion_def declaraciones
    (5) declaraciones -> . clase_def declaraciones
    (93) empty -> .
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (12) funcion_def -> . FUNC ID LPAREN params RPAREN return_option bloque_func
    (6) clase_def -> . CLASS ID clase_op bloque_clase
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    MAIN            reduce using rule 93 (empty -> .)
    FUNC            shift and go to state 10
    CLASS           shift and go to state 11
    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    clase_def                      shift and go to state 6
    declaraciones                  shift and go to state 20
    empty                          shift and go to state 3
    var_def                        shift and go to state 4
    funcion_def                    shift and go to state 5
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 7

    (24) var_def -> type_compuesto . ID

    ID              shift and go to state 21


state 8

    (33) type_compuesto -> ID .

    ID              reduce using rule 33 (type_compuesto -> ID .)


state 9

    (25) var_def -> type_simple . ID op_vardef

    ID              shift and go to state 22


state 10

    (12) funcion_def -> FUNC . ID LPAREN params RPAREN return_option bloque_func

    ID              shift and go to state 23


state 11

    (6) clase_def -> CLASS . ID clase_op bloque_clase

    ID              shift and go to state 24


state 12

    (29) type_simple -> INT .

    ID              reduce using rule 29 (type_simple -> INT .)
    LBRACE          reduce using rule 29 (type_simple -> INT .)


state 13

    (30) type_simple -> FLOAT .

    ID              reduce using rule 30 (type_simple -> FLOAT .)
    LBRACE          reduce using rule 30 (type_simple -> FLOAT .)


state 14

    (31) type_simple -> STRING .

    ID              reduce using rule 31 (type_simple -> STRING .)
    LBRACE          reduce using rule 31 (type_simple -> STRING .)


state 15

    (32) type_simple -> BOOL .

    ID              reduce using rule 32 (type_simple -> BOOL .)
    LBRACE          reduce using rule 32 (type_simple -> BOOL .)


state 16

    (1) programa -> declaraciones main .

    $end            reduce using rule 1 (programa -> declaraciones main .)


state 17

    (22) main -> MAIN . LPAREN RPAREN bloque_func
    (23) main -> MAIN . LPAREN RPAREN error

    LPAREN          shift and go to state 25


state 18

    (3) declaraciones -> var_def SEMICOLON . declaraciones
    (2) declaraciones -> . empty
    (3) declaraciones -> . var_def SEMICOLON declaraciones
    (4) declaraciones -> . funcion_def declaraciones
    (5) declaraciones -> . clase_def declaraciones
    (93) empty -> .
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (12) funcion_def -> . FUNC ID LPAREN params RPAREN return_option bloque_func
    (6) clase_def -> . CLASS ID clase_op bloque_clase
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    MAIN            reduce using rule 93 (empty -> .)
    FUNC            shift and go to state 10
    CLASS           shift and go to state 11
    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    var_def                        shift and go to state 4
    declaraciones                  shift and go to state 26
    empty                          shift and go to state 3
    funcion_def                    shift and go to state 5
    clase_def                      shift and go to state 6
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 19

    (4) declaraciones -> funcion_def declaraciones .

    MAIN            reduce using rule 4 (declaraciones -> funcion_def declaraciones .)


state 20

    (5) declaraciones -> clase_def declaraciones .

    MAIN            reduce using rule 5 (declaraciones -> clase_def declaraciones .)


state 21

    (24) var_def -> type_compuesto ID .

    SEMICOLON       reduce using rule 24 (var_def -> type_compuesto ID .)
    COMMA           reduce using rule 24 (var_def -> type_compuesto ID .)
    RPAREN          reduce using rule 24 (var_def -> type_compuesto ID .)


state 22

    (25) var_def -> type_simple ID . op_vardef
    (26) op_vardef -> . LBRACKET CTEI RBRACKET
    (27) op_vardef -> . LBRACKET CTEI RBRACKET LBRACKET CTEI RBRACKET
    (28) op_vardef -> . empty
    (93) empty -> .

    LBRACKET        shift and go to state 28
    SEMICOLON       reduce using rule 93 (empty -> .)
    COMMA           reduce using rule 93 (empty -> .)
    RPAREN          reduce using rule 93 (empty -> .)

    op_vardef                      shift and go to state 27
    empty                          shift and go to state 29

state 23

    (12) funcion_def -> FUNC ID . LPAREN params RPAREN return_option bloque_func

    LPAREN          shift and go to state 30


state 24

    (6) clase_def -> CLASS ID . clase_op bloque_clase
    (7) clase_op -> . INHERIT ID
    (8) clase_op -> . empty
    (93) empty -> .

    INHERIT         shift and go to state 32
    LBRACE          reduce using rule 93 (empty -> .)

    clase_op                       shift and go to state 31
    empty                          shift and go to state 33

state 25

    (22) main -> MAIN LPAREN . RPAREN bloque_func
    (23) main -> MAIN LPAREN . RPAREN error

    RPAREN          shift and go to state 34


state 26

    (3) declaraciones -> var_def SEMICOLON declaraciones .

    MAIN            reduce using rule 3 (declaraciones -> var_def SEMICOLON declaraciones .)


state 27

    (25) var_def -> type_simple ID op_vardef .

    SEMICOLON       reduce using rule 25 (var_def -> type_simple ID op_vardef .)
    COMMA           reduce using rule 25 (var_def -> type_simple ID op_vardef .)
    RPAREN          reduce using rule 25 (var_def -> type_simple ID op_vardef .)


state 28

    (26) op_vardef -> LBRACKET . CTEI RBRACKET
    (27) op_vardef -> LBRACKET . CTEI RBRACKET LBRACKET CTEI RBRACKET

    CTEI            shift and go to state 35


state 29

    (28) op_vardef -> empty .

    SEMICOLON       reduce using rule 28 (op_vardef -> empty .)
    COMMA           reduce using rule 28 (op_vardef -> empty .)
    RPAREN          reduce using rule 28 (op_vardef -> empty .)


state 30

    (12) funcion_def -> FUNC ID LPAREN . params RPAREN return_option bloque_func
    (17) params -> . var_def params_op
    (18) params -> . empty
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (93) empty -> .
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    RPAREN          reduce using rule 93 (empty -> .)
    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    params                         shift and go to state 36
    var_def                        shift and go to state 37
    empty                          shift and go to state 38
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 31

    (6) clase_def -> CLASS ID clase_op . bloque_clase
    (9) bloque_clase -> . LBRACE op_var op_func RBRACE

    LBRACE          shift and go to state 40

    bloque_clase                   shift and go to state 39

state 32

    (7) clase_op -> INHERIT . ID

    ID              shift and go to state 41


state 33

    (8) clase_op -> empty .

    LBRACE          reduce using rule 8 (clase_op -> empty .)


state 34

    (22) main -> MAIN LPAREN RPAREN . bloque_func
    (23) main -> MAIN LPAREN RPAREN . error
    (21) bloque_func -> . LBRACE estatutos RBRACE

    error           shift and go to state 43
    LBRACE          shift and go to state 44

    bloque_func                    shift and go to state 42

state 35

    (26) op_vardef -> LBRACKET CTEI . RBRACKET
    (27) op_vardef -> LBRACKET CTEI . RBRACKET LBRACKET CTEI RBRACKET

    RBRACKET        shift and go to state 45


state 36

    (12) funcion_def -> FUNC ID LPAREN params . RPAREN return_option bloque_func

    RPAREN          shift and go to state 46


state 37

    (17) params -> var_def . params_op
    (19) params_op -> . COMMA var_def params_op
    (20) params_op -> . empty
    (93) empty -> .

    COMMA           shift and go to state 48
    RPAREN          reduce using rule 93 (empty -> .)

    params_op                      shift and go to state 47
    empty                          shift and go to state 49

state 38

    (18) params -> empty .

    RPAREN          reduce using rule 18 (params -> empty .)


state 39

    (6) clase_def -> CLASS ID clase_op bloque_clase .

    FUNC            reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    CLASS           reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    ID              reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    INT             reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    FLOAT           reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    STRING          reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    BOOL            reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)
    MAIN            reduce using rule 6 (clase_def -> CLASS ID clase_op bloque_clase .)


state 40

    (9) bloque_clase -> LBRACE . op_var op_func RBRACE
    (13) op_var -> . var_def SEMICOLON op_var
    (14) op_var -> . empty
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (93) empty -> .
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    FUNC            reduce using rule 93 (empty -> .)
    RBRACE          reduce using rule 93 (empty -> .)
    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    op_var                         shift and go to state 50
    var_def                        shift and go to state 51
    empty                          shift and go to state 52
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 41

    (7) clase_op -> INHERIT ID .

    LBRACE          reduce using rule 7 (clase_op -> INHERIT ID .)


state 42

    (22) main -> MAIN LPAREN RPAREN bloque_func .

    $end            reduce using rule 22 (main -> MAIN LPAREN RPAREN bloque_func .)


state 43

    (23) main -> MAIN LPAREN RPAREN error .

    $end            reduce using rule 23 (main -> MAIN LPAREN RPAREN error .)


state 44

    (21) bloque_func -> LBRACE . estatutos RBRACE
    (34) estatutos -> . estatuto
    (35) estatutos -> . estatuto estatutos
    (36) estatutos -> . empty
    (37) estatuto -> . asignacion
    (38) estatuto -> . expresion SEMICOLON
    (39) estatuto -> . returns
    (40) estatuto -> . llamada_funcion SEMICOLON
    (41) estatuto -> . llamada_metodo SEMICOLON
    (42) estatuto -> . var_def SEMICOLON
    (43) estatuto -> . lectura
    (44) estatuto -> . escritura
    (45) estatuto -> . decision
    (46) estatuto -> . repeticion
    (93) empty -> .
    (47) asignacion -> . variable EQUAL expresion SEMICOLON
    (48) expresion -> . expresion binop expresion
    (49) expresion -> . plus_minus expresion
    (50) expresion -> . LPAREN expresion RPAREN
    (51) expresion -> . var_cte
    (69) returns -> . RETURN expresion SEMICOLON
    (70) llamada_funcion -> . ID LPAREN param_llamada RPAREN
    (74) llamada_metodo -> . ID DOT ID LPAREN param_llamada RPAREN
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (75) lectura -> . READ LPAREN variable op_lectura RPAREN SEMICOLON
    (83) escritura -> . WRITE LPAREN expresion op_escritura RPAREN SEMICOLON
    (86) decision -> . IF LPAREN expresion RPAREN THEN LBRACE estatutos RBRACE op_decision
    (89) repeticion -> . condicional
    (90) repeticion -> . no_condicional
    (78) variable -> . ID variable_op
    (60) plus_minus -> . PLUS
    (61) plus_minus -> . MINUS
    (62) var_cte -> . variable
    (63) var_cte -> . boolean
    (64) var_cte -> . CTEF
    (65) var_cte -> . CTEI
    (66) var_cte -> . CTESTRING
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL
    (91) condicional -> . WHILE LPAREN expresion RPAREN DO LBRACE estatutos RBRACE
    (92) no_condicional -> . FROM variable EQUAL expresion TO expresion DO LBRACE estatutos RBRACE
    (67) boolean -> . TRUE
    (68) boolean -> . FALSE

    RBRACE          reduce using rule 93 (empty -> .)
    LPAREN          shift and go to state 68
    RETURN          shift and go to state 70
    ID              shift and go to state 71
    READ            shift and go to state 72
    WRITE           shift and go to state 73
    IF              shift and go to state 74
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    CTEF            shift and go to state 80
    CTEI            shift and go to state 81
    CTESTRING       shift and go to state 82
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    WHILE           shift and go to state 83
    FROM            shift and go to state 84
    TRUE            shift and go to state 85
    FALSE           shift and go to state 86

    estatutos                      shift and go to state 53
    estatuto                       shift and go to state 54
    empty                          shift and go to state 55
    asignacion                     shift and go to state 56
    expresion                      shift and go to state 57
    returns                        shift and go to state 58
    llamada_funcion                shift and go to state 59
    llamada_metodo                 shift and go to state 60
    var_def                        shift and go to state 61
    lectura                        shift and go to state 62
    escritura                      shift and go to state 63
    decision                       shift and go to state 64
    repeticion                     shift and go to state 65
    variable                       shift and go to state 66
    plus_minus                     shift and go to state 67
    var_cte                        shift and go to state 69
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9
    condicional                    shift and go to state 75
    no_condicional                 shift and go to state 76
    boolean                        shift and go to state 79

state 45

    (26) op_vardef -> LBRACKET CTEI RBRACKET .
    (27) op_vardef -> LBRACKET CTEI RBRACKET . LBRACKET CTEI RBRACKET

    SEMICOLON       reduce using rule 26 (op_vardef -> LBRACKET CTEI RBRACKET .)
    COMMA           reduce using rule 26 (op_vardef -> LBRACKET CTEI RBRACKET .)
    RPAREN          reduce using rule 26 (op_vardef -> LBRACKET CTEI RBRACKET .)
    LBRACKET        shift and go to state 87


state 46

    (12) funcion_def -> FUNC ID LPAREN params RPAREN . return_option bloque_func
    (15) return_option -> . RET type_simple
    (16) return_option -> . empty
    (93) empty -> .

    RET             shift and go to state 89
    LBRACE          reduce using rule 93 (empty -> .)

    return_option                  shift and go to state 88
    empty                          shift and go to state 90

state 47

    (17) params -> var_def params_op .

    RPAREN          reduce using rule 17 (params -> var_def params_op .)


state 48

    (19) params_op -> COMMA . var_def params_op
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL

    ID              shift and go to state 8
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15

    var_def                        shift and go to state 91
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9

state 49

    (20) params_op -> empty .

    RPAREN          reduce using rule 20 (params_op -> empty .)


state 50

    (9) bloque_clase -> LBRACE op_var . op_func RBRACE
    (10) op_func -> . funcion_def op_func
    (11) op_func -> . empty
    (12) funcion_def -> . FUNC ID LPAREN params RPAREN return_option bloque_func
    (93) empty -> .

    FUNC            shift and go to state 10
    RBRACE          reduce using rule 93 (empty -> .)

    op_func                        shift and go to state 92
    funcion_def                    shift and go to state 93
    empty                          shift and go to state 94

state 51

    (13) op_var -> var_def . SEMICOLON op_var

    SEMICOLON       shift and go to state 95


state 52

    (14) op_var -> empty .

    FUNC            reduce using rule 14 (op_var -> empty .)
    RBRACE          reduce using rule 14 (op_var -> empty .)


state 53

    (21) bloque_func -> LBRACE estatutos . RBRACE

    RBRACE          shift and go to state 96


state 54

    (34) estatutos -> estatuto .
    (35) estatutos -> estatuto . estatutos
    (34) estatutos -> . estatuto
    (35) estatutos -> . estatuto estatutos
    (36) estatutos -> . empty
    (37) estatuto -> . asignacion
    (38) estatuto -> . expresion SEMICOLON
    (39) estatuto -> . returns
    (40) estatuto -> . llamada_funcion SEMICOLON
    (41) estatuto -> . llamada_metodo SEMICOLON
    (42) estatuto -> . var_def SEMICOLON
    (43) estatuto -> . lectura
    (44) estatuto -> . escritura
    (45) estatuto -> . decision
    (46) estatuto -> . repeticion
    (93) empty -> .
    (47) asignacion -> . variable EQUAL expresion SEMICOLON
    (48) expresion -> . expresion binop expresion
    (49) expresion -> . plus_minus expresion
    (50) expresion -> . LPAREN expresion RPAREN
    (51) expresion -> . var_cte
    (69) returns -> . RETURN expresion SEMICOLON
    (70) llamada_funcion -> . ID LPAREN param_llamada RPAREN
    (74) llamada_metodo -> . ID DOT ID LPAREN param_llamada RPAREN
    (24) var_def -> . type_compuesto ID
    (25) var_def -> . type_simple ID op_vardef
    (75) lectura -> . READ LPAREN variable op_lectura RPAREN SEMICOLON
    (83) escritura -> . WRITE LPAREN expresion op_escritura RPAREN SEMICOLON
    (86) decision -> . IF LPAREN expresion RPAREN THEN LBRACE estatutos RBRACE op_decision
    (89) repeticion -> . condicional
    (90) repeticion -> . no_condicional
    (78) variable -> . ID variable_op
    (60) plus_minus -> . PLUS
    (61) plus_minus -> . MINUS
    (62) var_cte -> . variable
    (63) var_cte -> . boolean
    (64) var_cte -> . CTEF
    (65) var_cte -> . CTEI
    (66) var_cte -> . CTESTRING
    (33) type_compuesto -> . ID
    (29) type_simple -> . INT
    (30) type_simple -> . FLOAT
    (31) type_simple -> . STRING
    (32) type_simple -> . BOOL
    (91) condicional -> . WHILE LPAREN expresion RPAREN DO LBRACE estatutos RBRACE
    (92) no_condicional -> . FROM variable EQUAL expresion TO expresion DO LBRACE estatutos RBRACE
    (67) boolean -> . TRUE
    (68) boolean -> . FALSE

  ! reduce/reduce conflict for RBRACE resolved using rule 34 (estatutos -> estatuto .)
    RBRACE          reduce using rule 34 (estatutos -> estatuto .)
    LPAREN          shift and go to state 68
    RETURN          shift and go to state 70
    ID              shift and go to state 71
    READ            shift and go to state 72
    WRITE           shift and go to state 73
    IF              shift and go to state 74
    PLUS            shift and go to state 77
    MINUS           shift and go to state 78
    CTEF            shift and go to state 80
    CTEI            shift and go to state 81
    CTESTRING       shift and go to state 82
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    STRING          shift and go to state 14
    BOOL            shift and go to state 15
    WHILE           shift and go to state 83
    FROM            shift and go to state 84
    TRUE            shift and go to state 85
    FALSE           shift and go to state 86

  ! RBRACE          [ reduce using rule 93 (empty -> .) ]

    estatuto                       shift and go to state 54
    estatutos                      shift and go to state 97
    empty                          shift and go to state 55
    asignacion                     shift and go to state 56
    expresion                      shift and go to state 57
    returns                        shift and go to state 58
    llamada_funcion                shift and go to state 59
    llamada_metodo                 shift and go to state 60
    var_def                        shift and go to state 61
    lectura                        shift and go to state 62
    escritura                      shift and go to state 63
    decision                       shift and go to state 64
    repeticion                     shift and go to state 65
    variable                       shift and go to state 66
    plus_minus                     shift and go to state 67
    var_cte                        shift and go to state 69
    type_compuesto                 shift and go to state 7
    type_simple                    shift and go to state 9
    condicional                    shift and go to state 75
    no_condicional                 shift and go to state 76
    boolean                        shift and go to state 79

state 55

    (36) estatutos -> empty .

    RBRACE          reduce using rule 36 (estatutos -> empty .)


state 56

    (37) estatuto -> asignacion .

    LPAREN          reduce using rule 37 (estatuto -> asignacion .)
    RETURN          reduce using rule 37 (estatuto -> asignacion .)
    ID              reduce using rule 37 (estatuto -> asignacion .)
    READ            reduce using rule 37 (estatuto -> asignacion .)
    WRITE           reduce using rule 37 (estatuto -> asignacion .)
    IF              reduce using rule 37 (estatuto -> asignacion .)
    PLUS            reduce using rule 37 (estatuto -> asignacion .)
    MINUS           reduce using rule 37 (estatuto -> asignacion .)
    CTEF            reduce using rule 37 (estatuto -> asignacion .)
    CTEI            reduce using rule 37 (estatuto -> asignacion .)
    CTESTRING       reduce using rule 37 (estatuto -> asignacion .)
    INT             reduce using rule 37 (estatuto -> asignacion .)
    FLOAT           reduce using rule 37 (estatuto -> asignacion .)
    STRING          reduce using rule 37 (estatuto -> asignacion .)
    BOOL            reduce using rule 37 (estatuto -> asignacion .)
    WHILE           reduce using rule 37 (estatuto -> asignacion .)
    FROM            reduce using rule 37 (estatuto -> asignacion .)
    TRUE            reduce using rule 37 (estatuto -> asignacion .)
    FALSE           reduce using rule 37 (estatuto -> asignacion .)
    RBRACE          reduce using rule 37 (estatuto -> asignacion .)


state 57

    (38) estatuto -> expresion . SEMICOLON
    (48) expresion -> expresion . binop expresion
    (52) binop -> . SAME
    (53) binop -> . NOTEQ
    (54) binop -> . GTHAN
    (55) binop -> . LTHAN
    (56) binop -> . PLUS
    (57) binop -> . MINUS
    (58) binop -> . TIMES
    (59) binop -> . DIVIDE
